@@ -1,3 +1,8 @@
+2007-04-04 Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/plugin_manager.py: Added context menus to
+	plugin tabs for changing views.
+	
 2007-04-03 Eitan Isaacson  <eitan@ascender.com>
 	
 	* src/lib/accerciser/plugin_manager.py: Started adding context
@@ -15,7 +20,7 @@
 	(seems more robust?), fixed bug #425497
 	* Makefile.am: reordered subdirs
 	* accerciser.spec.in: Added locals and --without-pyreqs flag
-	
+
 	* Makefile.am: Added po/
 	* po/LINGUAS: Added per http://live.gnome.org/GnomeGoals/PoLinguas
 	* configure.in: Changed next version number to 0.1.1 to sync with GNOME
